# Craft

./: .gitignore  LICENSE.md  README.md  meson.build
src/: auth.c  auth.h  client.c  client.h  config.h  cube.c  cube.h  db.c  db.h  item.c  item.h  main.c  map.c  map.h  matrix.c  matrix.h  noise.c  noise.h  qoi.c  qoi.h  ring.c  ring.h  sign.c  sign.h  util.c  util.h  world.c  world.h
textures/: font.qoi  sign.qoi  sky.qoi  texture.qoi
